--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/hammerjs": "^2.0.36",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.9.3",
+    "firebase": "^7.6.0",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^8.2.12",
     "jquery": "^3.4.1",
