--- a/package.json
+++ b/package.json
@@ -17,20 +17,23 @@
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@types/hammerjs": "^2.0.36",
+    "angular-chart.js": "^1.1.1",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.9.3",
-    "firebase": "^7.6.0",
+    "firebase": "^7.6.1",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^8.2.12",
     "jquery": "^3.4.1",
     "jszip": "^3.1.5",
     "minireset.css": "~0.0.4",
+    "ng-circle-progress": "^1.5.1",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
